routes/testing-gtw/httbin-test.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httbin-test
  namespace: test-gtw
  labels:
    app.kubernetes.io/part-of: testing-gtw
    # Matches catalog Resource metadata.annotations['backstage.io/kubernetes-id'].
    backstage.io/kubernetes-id: httbin-test
  annotations:
    backstage.io/catalog-entity: resource:default/httbin-test
spec:
  parentRefs:
    - name: testing-gtw
      namespace: test-gtw
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: httbin
          namespace: test-gtw
          port: 8080
