routes/testing-gtw/route-2.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-2
  namespace: default
  labels:
    app.kubernetes.io/part-of: testing-gtw
    backstage.io/kubernetes-id: route-2
  annotations:
    backstage.io/catalog-entity: resource:default/route-2
spec:
  parentRefs:
    - name: envoy-gateway-1
      namespace: envoy-gateway-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/status"
          method: GET
      backendRefs:
        - name: httpbin-v1
          namespace: default
          port: 8080
          weight: 80
        - name: httbin-v2
          namespace: default
          port: 8080
          weight: 20
